XXX: Add boot support for u-boot.ipq image

--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -297,7 +297,7 @@ archprepare:
 # Convert bzImage to zImage
 bzImage: zImage
 
-BOOT_TARGETS	= zImage Image xipImage bootpImage uImage
+BOOT_TARGETS	= zImage Image xipImage bootpImage uImage uImage.ipq Image.gz
 INSTALL_TARGETS	= zinstall uinstall install
 
 PHONY += bzImage $(BOOT_TARGETS) $(INSTALL_TARGETS)
