--- a/arch/arm/boot/dts/qcom-ipq8064-ap148.dts
+++ b/arch/arm/boot/dts/qcom-ipq8064-ap148.dts
@@ -46,6 +46,29 @@
 					bias-none;
 				};
 			};
+			nand_pins: nand_pins {
+				mux {
+					pins = "gpio34", "gpio35", "gpio36",
+						"gpio37", "gpio38", "gpio39",
+						"gpio40", "gpio41", "gpio42",
+						"gpio43", "gpio44", "gpio45",
+						"gpio46", "gpio47";
+					function = "nand";
+					drive-strength = <10>;
+					bias-disable;
+				};
+				pullups {
+					pins = "gpio39";
+					bias-pull-up;
+				};
+				hold {
+					pins = "gpio40", "gpio41", "gpio42",
+						"gpio43", "gpio44", "gpio45",
+						"gpio46", "gpio47";
+					bias-bus-hold;
+				};
+			};
+
 		};
 
 		gsbi@16300000 {
@@ -126,6 +149,17 @@
 
 		sata@29000000 {
 			status = "ok";
+		};
+
+		dma@18300000 {
+			status = "ok";
+		};
+
+		nand@0x1ac00000 {
+			status = "ok";
+
+			pinctrl-0 = <&nand_pins>;
+			pinctrl-names = "default";
 		};
 	};
 };
