qcom: Kconfig: Make drivers mutually exclusive
This patch makes sure QCOM ADM dmaengine and QCOM Nand cannot be enabled at the
same time.  This is an issue because the dma drivers will conflict with one
another.

Signed-off-by: Andy Gross <agross@codeaurora.org>

--- a/drivers/dma/Kconfig
+++ b/drivers/dma/Kconfig
@@ -412,7 +412,7 @@ config QCOM_BAM_DMA
 
 config QCOM_ADM
 	tristate "Qualcomm ADM support"
-	depends on ARCH_QCOM || (COMPILE_TEST && OF && ARM)
+	depends on !MTD_QCOM_ADM && (ARCH_QCOM || (COMPILE_TEST && OF && ARM))
 	select DMA_ENGINE
 	select DMA_VIRTUAL_CHANNELS
 	---help---
