msm: ipq806x: Added support for QFPROM version read/write
Added sysfs entry for reading and writing
qfprom version registers.

CRs-Fixed: 701686

Change-Id: Ideb608f27d70dee9d9c6dc6c4e9b58e5716c1697
Signed-off-by: Anusha Canchi Ramachandra Rao <anusha@codeaurora.org>

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -62,6 +62,7 @@ obj-$(CONFIG_MSM_IPC_LOGGING) += ipc_logging_debug.o
 endif
 obj-$(CONFIG_MSM_SMD) += smd.o smd_debug.o remote_spinlock.o smd_private.o
 obj-y += socinfo.o
+obj-y += qfprom.o
 ifndef CONFIG_ARCH_APQ8064
 ifndef CONFIG_ARCH_MSM8960
 ifndef CONFIG_ARCH_MSM8X60
