--- a/drivers/net/phy/Kconfig
+++ b/drivers/net/phy/Kconfig
@@ -42,7 +42,7 @@ config MARVELL_PHY
 	tristate "Drivers for Marvell PHYs"
 	---help---
 	  Currently has a driver for the 88E1011S
-	
+
 config DAVICOM_PHY
 	tristate "Drivers for Davicom PHYs"
 	---help---
@@ -281,3 +281,9 @@ config PSB6970_PHY
 	tristate "Lantiq XWAY Tantos (PSB6970) Ethernet switch"
 	select SWCONFIG
 	select ETHERNET_PACKET_MANGLE
+
+config MDIO_QCA961X
+	tristate "Qualcomm Atheros qca961x MDIO interface"
+	help
+	  This driver supports the MDIO interface found in Qualcomm
+	  Atheros qca961x Soc chip.
