--- a/arch/arm/boot/dts/qcom-ipq8064-ap148.dtsi
+++ b/arch/arm/boot/dts/qcom-ipq8064-ap148.dtsi
@@ -17,6 +17,12 @@
 
 	aliases {
 		mdio-gpio0 = &mdio0;
+		/*
+		 * U-Boot searches for these entries and patches
+		 * 'local-mac-address'
+		 */
+		ethernet0 = &gmac1;
+		ethernet1 = &gmac2;
 	};
 
 	soc {
