qcom: qca961x: Add mdio interface dts
Define register description of mdio interface for qca961x soc chip.

Change-Id: I32a1085d6de8f7d5aefa7e75ff3b567478915669
Signed-off-by: luny <luny@codeaurora.org>

--- a/arch/arm/boot/dts/qcom-qca961x.dtsi
+++ b/arch/arm/boot/dts/qcom-qca961x.dtsi
@@ -602,4 +602,11 @@
 			psgmii_access_mode = "local bus";
 		};
 
+		mdio@90000 {
+			#address-cells = <1>;
+			#size-cells = <1>;
+			compatible = "qcom,qca961x-mdio";
+			reg = <0x90000 0x64>;
+		};
+
 	};
