INTERNAL: arm64: dts: qcom: Add cmd_db reserved area for sc7180
Command_db provides mappning for resource key and address managed
by remote processor. Add cmd_db reserved memory area.

Change-Id: I52c4d06e1a2027c157633df4bb32140f96efeef6
Signed-off-by: Maulik Shah <mkshah@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/sc7180.dtsi
+++ b/arch/arm64/boot/dts/qcom/sc7180.dtsi
@@ -22,6 +22,18 @@
 		reg = <0 0x80000000 0 0>;
 	};
 
+	reserved_memory: reserved-memory {
+		#address-cells = <2>;
+		#size-cells = <2>;
+		ranges;
+
+		cmd_db: reserved-memory@80820000 {
+			reg = <0x0 0x80820000 0x0 0x20000>;
+			compatible = "qcom,cmd-db";
+			no-map;
+		};
+	};
+
 	cpus {
 		#address-cells = <2>;
 		#size-cells = <0>;
