Minidump: Optimizations for Minidump feature
1) While traversing metadata list to add
dump segments, in addition to checking for
invalidated entries, this change adds a check
for duplicate virtual addresses.

2) Reduce critical section within spinlock

3) Add debug code under CONFIG_QCA_MINIDUMP_DEBUG
flag

Change-Id: Ica76ad8113f448f64361d74e9b608ccb9b2bf4b1
Signed-off-by: Gitanjali Krishna <gitanjal@codeaurora.org>

--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -544,7 +544,15 @@ config QCA_MINIDUMP
 	  Say Y here to include QCA minidump feature.
 	  This feature enables dumping desired regions
 	  instead of dumping whole DDR up on system crash
-	  Currently supports  IPQ8074 target.
+	  Currently supported on IPQ807x /IPQ60xx targets.
+
+config QCA_MINIDUMP_DEBUG
+	bool "QCA minidump debug feauture"
+	depends on QCA_MINIDUMP
+	help
+		Say Y here to include QCA minidump debug feature.
+		This feature enables debug prints for QCA Minidump.
+		Currently supported on IPQ807x / IPQ60xx targets.
 
 config MESON_WATCHDOG
 	tristate "Amlogic Meson SoCs watchdog support"
