arm64: dts: ipq6018: Added pwm node
Change-Id: Ia1a62c93af6dc2d37e95e284fe8207f553ac330f
Signed-off-by: Rajkumar Ayyasamy <arajkuma@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/qcom-ipq6018-db-cp01.dts
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq6018-db-cp01.dts
@@ -197,6 +197,15 @@
 			bias-pull-up;
 		};
 	};
+
+	pwm_pins: pwm_pinmux {
+		mux_1 {
+			pins = "gpio18";
+			function = "pwm00";
+			drive-strength = <8>;
+		};
+	};
+
 };
 
 &soc {
@@ -320,6 +329,13 @@
 				port_mac_sel = "QGMAC_PORT";
 			};
 		};
+	};
+
+	pwm {
+		pinctrl-0 = <&pwm_pins>;
+		pinctrl-names = "default";
+		used-pwm-indices = <1>, <0>, <0>, <0>;
+		status = "disabled";
 	};
 };
 
