--- a/chromeos/config/arm64/chromiumos-qualcomm.flavour.config
+++ b/chromeos/config/arm64/chromiumos-qualcomm.flavour.config
@@ -84,6 +84,7 @@ CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_PROVISION=y
 CONFIG_SCSI_UFS_QCOM=y
+CONFIG_SC_GCC_7180=y
 CONFIG_SDM_DISPCC_845=y
 CONFIG_SDM_GPUCC_845=y
 CONFIG_SDM_LPASSCC_845=y
