INTERNAL: arm64: dts: qcom: Add soc sleep stats node
Add soc sleep stats device node.

Change-Id: I4a60e3b4dcb5c30f7c305a31c0e147ba9769e38b
Signed-off-by: Maulik Shah <mkshah@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/sc7180.dtsi
+++ b/arch/arm64/boot/dts/qcom/sc7180.dtsi
@@ -445,5 +445,10 @@
 					  <WAKE_TCS    3>,
 					  <CONTROL_TCS 1>;
 		};
+
+		rpmh_sleep_stats: soc-sleep-stats@c3f0000 {
+			compatible = "qcom,rpmh-sleep-stats";
+			reg = <0 0xc3f0000 0 0x400>;
+		};
 	};
 };
