--- a/arch/arm64/boot/dts/qcom/qcom-ipq5018.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq5018.dtsi
@@ -18,6 +18,8 @@
 #include <dt-bindings/clock/qcom,gcc-ipq5018.h>
 #include <dt-bindings/reset/qcom,gcc-ipq5018.h>
 #include <dt-bindings/clock/qca,apss-ipq5018.h>
+#include <dt-bindings/input/input.h>
+#include <dt-bindings/gpio/gpio.h>
 #include "qcom-ipq5018-memory.dtsi"
 #include "qcom-ipq5018-mhi.dtsi"
 #include "ipq5018_clocks.dtsi"
