arm64: dts: ipq5018: Add nss radio priority parameter to wifi node
Add nss radio priority param "nss-radio-priority" to wifi node
in device tree for ipq5018 mp03.5-c1.

Change-Id: I501450f35620de0f87f3ba5da8bb4d8259be5fb7
Signed-off-by: Seevalamuthu Mariappan <seevalam@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/qcom-ipq5018-mp03.5-c1.dts
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq5018-mp03.5-c1.dts
@@ -800,6 +800,7 @@
 #else
 	qcom,caldb-addr = <0x4D400000>;
 	m3-dump-addr = <0x4D200000>;
+	nss-radio-priority = <0>;
 #endif
 	qcom,caldb-size = <0x200000>;
 	status = "ok";
@@ -821,6 +822,7 @@
 #else
 	qcom,caldb-addr = <0x4E800000>;
 	m3-dump-addr = <0x4E600000>;
+	nss-radio-priority = <1>;
 #endif
 	qcom,caldb-size = <0x500000>;
 	status = "ok";
@@ -842,6 +844,7 @@
 #else
 	qcom,caldb-addr = <0x4FF00000>;
 	m3-dump-addr = <0x4FD00000>;
+	nss-radio-priority = <1>;
 #endif
 	qcom,caldb-size = <0x500000>;
 	status = "ok";
