dts: sirocco: Add reserved memory node BT
Add reserved memory node for BT memory region.

Change-Id: Ib2695625c0f115bd14d9b2cb605f8258492b89af
Signed-off-by: Singh, Amandeep <amansing@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/sirocco-p0.dts
+++ b/arch/arm64/boot/dts/qcom/sirocco-p0.dts
@@ -44,6 +44,11 @@
 			no-map;
 			reg = <0x0 0x4D400000 0x0 0x200000>;
 		};
+
+		bt_region: bt@7000000 {
+			no-map;
+			reg = <0x0 0x07000000 0x0 0x58000>;
+		};
 	};
 };
 
