--- a/arch/arm64/boot/dts/qcom/ipq5018.dtsi
+++ b/arch/arm64/boot/dts/qcom/ipq5018.dtsi
@@ -986,6 +986,24 @@
 			compatible = "syscon";
 			reg = <0x0B111000 0x1000>;
 		};
+
+		bt: bt@7000000 {
+			compatible = "qcom,bt";
+			firmware = "IPQ5018/bt_fw_patch.mdt";
+
+			reg = <0x01943008 0x8>;
+			reg-names = "bt_warm_rst";
+
+			qcom,ipc = <&apcs 8 23>;
+			interrupts = <GIC_SPI 162 IRQ_TYPE_EDGE_RISING>;
+
+			resets = <&gcc GCC_BTSS_BCR>;
+			reset-names = "btss_reset";
+
+			clocks = <&gcc GCC_BTSS_LPO_CLK>;
+			clock-names = "lpo_clk";
+			status = "disabled";
+		};
 	};
 
 	qcom,test@0 {
