dts: ipq50xx: Add IPC interrupt node for BT
Add IPC interrupt node for BT to receive interrupts from firmware.

Change-Id: I5d75460a47f8ac6dd77c4f5642ecac14b170a831
Signed-off-by: Singh, Amandeep <amansing@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/ipq5018.dtsi
+++ b/arch/arm64/boot/dts/qcom/ipq5018.dtsi
@@ -981,6 +981,11 @@
 			dload_status = <0>;
 			dload_warm_status = <0>;
 		};
+
+		apcs: syscon@b111000 {
+			compatible = "syscon";
+			reg = <0x0B111000 0x1000>;
+		};
 	};
 
 	qcom,test@0 {
