ipq50xx: soc: qcom: Add BT Kconfig entry
Add BT Kconfig entry in menu to select/unselect it during compilation.

Change-Id: I638e0ce2bcc9640b5f2da63bba40d9baf4b32e91
Signed-off-by: Singh, Amandeep <amansing@codeaurora.org>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -278,4 +278,10 @@ config QTI_APSS_ACC
 	  to the ACC associated with the CPU accessing the region.
 
 	  If unsure, say N.
+
+config QTI_BT_INTERFACE
+	tristate "TTY interface support for BT over IMEM"
+	default n
+	help
+	  Enable TTY support for BT host over IMEM.
 endmenu
