ipq50xx: soc: qcom: Add BT config entry in Makefile
Add BT config entry in Makefile to enable bt interface driver compilation.

Change-Id: Iec91ae93903fe0c777f1b91dd50e343adde17fd5
Signed-off-by: Singh, Amandeep <amansing@codeaurora.org>

--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -33,3 +33,5 @@ obj-$(CONFIG_QTI_TZ_LOG) += tz_log.o
 obj-$(CONFIG_QTI_CTXT_SAVE) += ctx-save.o
 obj-$(CONFIG_QTI_APSS_ACC) += cpu_ops.o cpu_pwr_ctl.o
 obj-$(CONFIG_IPQ_SUBSYSTEM_RESTART_TEST) += testssr.o
+bt_interface-y			:= bt_tty.o bt_ipc.o
+obj-$(CONFIG_QTI_BT_INTERFACE)	+= bt_interface.o
