rproc: Kconfig: Add Config entry for BT remoteproc
Add Kconfig entry to support BT rproc driver.

Change-Id: I765e4ca69e48787e2344745c5bdd72f19a9b39df
Signed-off-by: Singh, Amandeep <amansing@codeaurora.org>

--- a/drivers/remoteproc/Kconfig
+++ b/drivers/remoteproc/Kconfig
@@ -230,6 +230,12 @@ config STM32_RPROC
 
 	  This can be either built-in or a loadable module.
 
+config QTI_BT_PIL
+	tristate "Qualcomm BT Peripheral Image Loader"
+	default n
+	help
+	  Say y here to support the Peripheral Image Loader for the Qualcomm
+	  Bluetooth Subsystem.
 endif # REMOTEPROC
 
 endmenu
