net: cnss2: Changes for FW memory optimization
The following changes are to be done as part of FW memory
optimization:

1. Add support to send num_wlan_clients and num_wlan_vaps to FW as part
   of QMI host capabilities message.
2. Add target memory region information under wifi nodes in all the DTS
   files.
3. Perform a sanity check on the memory request from FW. If the
   requested memory is less than the reserved memory, print a
   warning message and continue. Else, print error and assert.
4. Split cnss_pci_alloc_fw_mem function into two different functions.
   Have one function for PCI targets and other function for AHB
   targets.

Change-Id: I909ad0d6b2064ec8b52393d1241ce7b954821152
Signed-off-by: Abishek Ganapathy <abishekg@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/qcom-ipq5018-db-mp03.3.dts
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq5018-db-mp03.3.dts
@@ -742,6 +742,7 @@
 #else
 	qcom,tgt-mem-mode = <1>;
 #endif
+	mem-region = <&q6_ipq5018_data>;
 	qcom,board_id = <0x23>;
 	qcom,caldb-addr = <0x0 0x4D000000 0 0 0>;
 	qcom,caldb-size = <0x200000>;
@@ -762,6 +763,7 @@
 	 * once wifi driver changes are in place to
 	 * qcn6122 compatible string, remove qcn9100 here
 	 */
+	mem-region = <&q6_qcn6122_data1>;
 	compatible = "qcom,cnss-qcn6122", "qcom,cnss-qcn9100";
 	qcom,bdf-addr = <0x0 0x4D200000 0x4CF00000 0x0 0x0>;
 	qcom,caldb-addr = <0x0 0x4E400000 0 0 0>;
@@ -816,4 +818,6 @@
 			hremote-size = <0x1400000>;
 			tgt-mem-mode = <0x1>;
 #endif
+			hremote_node = <&q6_qcn9000_region>;
+			mhi_node = <&mhi_region1>;
 };
