--- a/arch/arm64/boot/dts/qcom/qcom-ipq5018-mp02.1.dts
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq5018-mp02.1.dts
@@ -658,6 +658,7 @@
 	qcom,caldb-addr = <0 0 0 0 0>;
 	qcom,caldb-size = <0x0>;
 	qcom,userpd-subsys-name = "q6v5_wcss_userpd1";
+	mem-region = <&q6_ipq5018_data>;
 	status = "ok";
 };
 
@@ -675,6 +676,7 @@
 	qcom,caldb-addr = <0 0 0 0 0>;
 	qcom,caldb-size = <0x0>;
 	qcom,userpd-subsys-name = "q6v5_wcss_userpd2";
+	mem-region = <&q6_qcn6122_data1>;
 	status = "ok";
 };
 
@@ -692,5 +694,6 @@
 	qcom,caldb-addr = <0 0 0 0 0>;
 	qcom,caldb-size = <0x0>;
 	qcom,userpd-subsys-name = "q6v5_wcss_userpd3";
+	mem-region = <&q6_qcn6122_data2>;
 	status = "ok";
 };
