--- a/arch/arm64/boot/dts/qcom/qcom-ipq5018-mp03.1.dts
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq5018-mp03.1.dts
@@ -120,7 +120,7 @@
 			reg = <0x0 0x4c800000 0x0 0x100000>;
 		};
 
-		qcn9000_pcie0@4c900000 {
+		qcn9000_pcie0: qcn9000_pcie0@4c900000 {
 			no-map;
 			reg = <0x0 0x4C900000 0x0 0x01100000>;
 		};
@@ -211,7 +211,7 @@
 			reg = <0x0 0x4ca00000 0x0 0x200000>;
 		};
 
-		qcn9000_pcie0@4cc00000 {
+		qcn9000_pcie0: qcn9000_pcie0@4cc00000 {
 			no-map;
 			reg = <0x0 0x4CC00000 0x0 0x01E00000>;
 		};
@@ -302,7 +302,7 @@
 			reg = <0x0 0x4ca00000 0x0 0x200000>;
 		};
 
-		qcn9000_pcie0@4cc00000 {
+		qcn9000_pcie0: qcn9000_pcie0@4cc00000 {
 			no-map;
 			reg = <0x0 0x4CC00000 0x0 0x02D00000>;
 		};
@@ -865,12 +865,15 @@
 
 &wifi0 {
 	/* IPQ5018 */
+	mem-region = <&q6_region>;
 	qcom,board_id = <0x24>;
 	status = "ok";
 };
 
 &wifi3 {
 	/* QCN9000 5G */
+	hremote_node = <&qcn9000_pcie0>;
+	mhi_node = <&mhi_region1>;
 	board_id = <0xa0>;
 	status = "ok";
 };
