--- a/arch/arm64/boot/dts/qcom/qcom-ipq5018-mp03.3-c4.dts
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq5018-mp03.3-c4.dts
@@ -129,7 +129,7 @@
 			reg = <0x0 0x4ca00000 0x0 0x200000>;
 		};
 
-		qcn9000_pcie0@4cc00000 {
+		qcn9000_pcie0: qcn9000_pcie0@4cc00000 {
 			no-map;
 			reg = <0x0 0x4CC00000 0x0 0x01E00000>;
 		};
@@ -245,7 +245,7 @@
 			reg = <0x0 0x4ca00000 0x0 0x200000>;
 		};
 
-		qcn9000_pcie0@4cc00000 {
+		qcn9000_pcie0: qcn9000_pcie0@4cc00000 {
 			no-map;
 			reg = <0x0 0x4CC00000 0x0 0x02D00000>;
 		};
@@ -298,6 +298,7 @@
 
 &wifi0 {
 	/delete-property/ qcom,multipd_arch;
+	mem-region = <&q6_region>;
 	qcom,bdf-addr = <0x4BA00000 0x4BA00000 0x4BA00000 0x0 0x0>;
 	qcom,caldb-addr = <0x4CA00000 0x4CA00000 0x0 0x0 0x0>;
 	qcom,caldb-size = <0x200000>;
@@ -306,6 +307,7 @@
 };
 
 &wifi1 {
+	/delete-property/ mem-region;
 	/delete-property/ qcom,multipd_arch;
 	status = "disabled";
 };
@@ -364,6 +366,8 @@
 	caldb-size = <0x800000>;
 	tgt-mem-mode = <0x0>;
 #endif
+	hremote_node = <&qcn9000_pcie0>;
+	mhi_node = <&mhi_region0>;
 };
 
 &wifi4 {
