--- a/arch/arm64/boot/dts/qcom/qcom-ipq5018-mp03.4-c1.dts
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq5018-mp03.4-c1.dts
@@ -133,12 +133,12 @@
 			reg = <0x0 0x4ca00000 0x0 0x200000>;
 		};
 
-		qcn9000_pcie0@4cc00000 {
+		qcn9000_pcie0: qcn9000_pcie0@4cc00000 {
 			no-map;
 			reg = <0x0 0x4CC00000 0x0 0x01E00000>;
 		};
 
-		qcn9000_pcie1@4ea00000 {
+		qcn9000_pcie1: qcn9000_pcie1@4ea00000 {
 			no-map;
 			reg = <0x0 0x4EA00000 0x0 0x01E00000>;
 		};
@@ -263,12 +263,12 @@
 			reg = <0x0 0x4ca00000 0x0 0x200000>;
 		};
 
-		qcn9000_pcie0@4cc00000 {
+		qcn9000_pcie0: qcn9000_pcie0@4cc00000 {
 			no-map;
 			reg = <0x0 0x4CC00000 0x0 0x02D00000>;
 		};
 
-		qcn9000_pcie1@4f900000 {
+		qcn9000_pcie1: qcn9000_pcie1@4f900000 {
 			no-map;
 			reg = <0x0 0x4F900000 0x0 0x02D00000>;
 		};
@@ -339,6 +339,7 @@
 
 &wifi0 {
 	/delete-property/ qcom,multipd_arch;
+	mem-region = <&q6_region>;
 	qcom,bdf-addr = <0x4BA00000 0x4BA00000 0x4BA00000 0x0 0x0>;
 	qcom,caldb-addr = <0x4CA00000 0x4CA00000 0x0 0x0 0x0>;
 	qcom,caldb-size = <0x200000>;
@@ -347,6 +348,7 @@
 };
 
 &wifi1 {
+	/delete-property/ mem-region;
 	/delete-property/ qcom,multipd_arch;
 	status = "disabled";
 };
@@ -401,6 +403,8 @@
 	caldb-size = <0x800000>;
 	tgt-mem-mode = <0x0>;
 #endif
+	hremote_node = <&qcn9000_pcie0>;
+	mhi_node = <&mhi_region0>;
 };
 
 &wifi4 {
@@ -452,5 +456,7 @@
 	caldb-size = <0x800000>;
 	tgt-mem-mode = <0x0>;
 #endif
+	hremote_node = <&qcn9000_pcie1>;
+	mhi_node = <&mhi_region1>;
 };
 #endif
