--- a/arch/arm64/boot/dts/qcom/qcom-ipq6018-cp01-c3.dts
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq6018-cp01-c3.dts
@@ -91,7 +91,7 @@
 		 * |           Remaining memory for Linux            |
 		 * +=================================================+
 		 */
-		qcn9000_pcie0@4e400000 {
+		qcn9000_pcie0: qcn9000_pcie0@4e400000 {
 			no-map;
 			reg = <0x0 0x4E400000 0x0 0x1E00000>;
 		};
@@ -131,7 +131,7 @@
 		 * |           Remaining memory for Linux            |
 		 * +=================================================+
 		 */
-		qcn9000_pcie0@50200000 {
+		qcn9000_pcie0: qcn9000_pcie0@50200000 {
 			no-map;
 			reg = <0x0 0x50200000 0x0 0x02D00000>;
 		};
@@ -247,6 +247,8 @@
 	hremote-size = <0x2300000>;
 	tgt-mem-mode = <0x0>;
 #endif
+	hremote_node = <&qcn9000_pcie0>;
+	mhi_node = <&mhi_region0>;
 	board_id = <0xa4>;
 	caldb-size = <0x800000>;
 	status = "ok";
