--- a/arch/arm64/boot/dts/qcom/qcom-ipq6018.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq6018.dtsi
@@ -2107,6 +2107,7 @@
 		#else
 			qcom,tgt-mem-mode = <0>;
 		#endif
+			mem-region = <&q6_region>;
 			qcom,bdf-addr = <0x4ABC0000 0x4ABC0000 0x4ABC0000
 					 0x0 0x0>;
 			qcom,caldb-addr = <0x4B500000 0x4B500000 0x4B500000
