--- a/arch/arm64/boot/dts/qcom/qcom-ipq807x-hk14.dts
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq807x-hk14.dts
@@ -86,7 +86,7 @@
 	 * +=================================================+
 	 */
 		/delete-node/ wifi_dump@4e900000;
-		qcn9000_pcie0@4e900000 {
+		qcn9000_pcie0: qcn9000_pcie0@4e900000 {
 			no-map;
 			reg = <0x0 0x4e900000 0x0 0x01e00000>;
 		};
@@ -130,7 +130,7 @@
 	 * |                                                 |
 	 * +=================================================+
 	 */
-		qcn9000_pcie0@51100000 {
+		qcn9000_pcie0: qcn9000_pcie0@51100000 {
 			no-map;
 			reg = <0x0 0x51100000 0x0 0x02D00000>;
 		};
@@ -956,6 +956,8 @@
 	tgt-mem-mode = <0x0>;
 #endif
 	caldb-size = <0x800000>;
+	hremote_node = <&qcn9000_pcie0>;
+	mhi_node = <&mhi_region0>;
 	board_id = <0xa4>;
 	status = "ok";
 #if defined(__CNSS2__)
