trace: srd: Pass dev param to dma_alloc_coherent
dma_alloc_coherent needs a device parameter in 64 bit architecture.
Pass a device parameter for the DMA APIs to succeed.

Change-Id: I91c59b67dfae15f4fab821dbf839e13edc4de5cf
Signed-off-by: Prasanna Kumar Thoorvas Samyrao Muralidharan <ptsm@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/qcom-ipq5018.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq5018.dtsi
@@ -42,6 +42,10 @@
 	};
 #endif
 
+	srd_trace: srd_trace {
+		compatible = "srd";
+	};
+
 	soc: soc {
 		#address-cells = <0x1>;
 		#size-cells = <0x1>;
