--- a/arch/arm64/boot/dts/qcom/qcom-ipq6018.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq6018.dtsi
@@ -29,6 +29,10 @@
 	qcom,board-id = <0x8 0x0>;
 	qcom,pmic-id = <0x0 0x0 0x0 0x0>;
 
+	srd_trace: srd_trace {
+		compatible = "srd";
+	};
+
 	soc: soc {
 		#address-cells = <0x1>;
 		#size-cells = <0x1>;
