--- a/arch/arm64/boot/dts/qcom/qcom-ipq5018-db-mp03.3.dts
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq5018-db-mp03.3.dts
@@ -474,6 +474,12 @@
 	};
 
 	qspi_nand_pins: qspi_nand_pins {
+		qspi_clock {
+			pins = "gpio9";
+			function = "qspi_clk";
+			drive-strength = <8>;
+			bias-disable;
+		};
 		qspi_cs {
 				pins = "gpio8";
 				function = "qspi_cs";
