--- a/arch/arm64/boot/dts/qcom/ipq5018-mp03.5-c1.dts
+++ b/arch/arm64/boot/dts/qcom/ipq5018-mp03.5-c1.dts
@@ -702,3 +702,17 @@
 	status = "ok";
 };
 
+&usb3 {
+       status = "ok";
+       device-power-gpio = <&tlmm 24 1>;
+};
+
+&dwc_0 {
+       /delete-property/ #phy-cells;
+       /delete-property/ phys;
+       /delete-property/ phy-names;
+};
+
+&hs_m31phy_0 {
+       status = "ok";
+};
