--- a/arch/arm64/boot/dts/qcom/qcom-ipq5018.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq5018.dtsi
@@ -75,6 +75,7 @@
 					<GIC_PPI 4 (GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_LOW)>,
 					<GIC_PPI 1 (GIC_CPU_MASK_SIMPLE(4) | IRQ_TYPE_LEVEL_LOW)>;
 			clock-frequency = <24000000>;
+			always-on;
 		};
 
 		gcc: gcc@1800000 {
