--- a/drivers/remoteproc/Kconfig
+++ b/drivers/remoteproc/Kconfig
@@ -231,10 +231,10 @@ config STM32_RPROC
 	  This can be either built-in or a loadable module.
 
 config QTI_BT_PIL
-	tristate "Qualcomm BT Peripheral Image Loader"
+	tristate "QTI BT Peripheral Image Loader"
 	default n
 	help
-	  Say y here to support the Peripheral Image Loader for the Qualcomm
+	  Say y here to support the Peripheral Image Loader for the QTI
 	  Bluetooth Subsystem.
 endif # REMOTEPROC
 
