--- a/arch/arm64/boot/dts/qcom/qcom-ipq807x-soc.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcom-ipq807x-soc.dtsi
@@ -134,6 +134,11 @@
 	};
 #endif
 
+	srd_trace: srd_trace {
+		compatible = "srd";
+		status = "disabled";
+	};
+
 	soc: soc {
 		#address-cells = <0x1>;
 		#size-cells = <0x1>;
