--- a/drivers/soc/qcom/bt/Makefile
+++ b/drivers/soc/qcom/bt/Makefile
@@ -1,4 +1,3 @@
-ifdef CONFIG_QTI_BT_TTY
-	obj-y += bt_tty.o bt_ipc.o
-	obj-m += bt_rproc.o
-endif
+bt_interface-y			:= bt_tty.o bt_ipc.o
+obj-$(CONFIG_QTI_BT_TTY)	+= bt_interface.o
+obj-$(CONFIG_QTI_BT_TTY)	+= bt_rproc.o
